[BUGFIX] Align hidden icon for "Elements on page"

--- a/Resources/Private/Css/Elements/_RightBar.scss
+++ b/Resources/Private/Css/Elements/_RightBar.scss
@@ -196,6 +196,12 @@
       }
     }
   }
+
+  .icon-overlay-hidden {
+    position: relative;
+    left: 14px;
+    bottom: 20px;
+  }
 }
 
 .#{$t3-frontend}save,
